--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "testMultiple": "nodemon serverTestMultiple.js"
+    "testMultiple": "nodemon serverTestMultiple.js",
+    "playerMap": "nodemon playermapServer.js"
   },
   "author": "",
   "license": "ISC",
