--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "gd-ant-plus": "^0.0.34",
     "nodemon": "^3.1.9",
     "socket.io-client": "^4.8.1"
